stop wrap over 500px

--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -1,6 +1,11 @@
 .search-input--custom-width {
+  flex-flow: row wrap;
   margin-left: -0.5rem;
   margin-top: -0.5rem;
+
+  @include mq(s) {
+    flex-flow: row nowrap !important;
+  }
 }
 
 .btn,
